samples/_failures_safe/1761712392_631518_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d1828cc.c: In function ‘main’:
./samples/SAFE/__tmp_4d1828cc.c:146:9: error: expected expression at end of input
  146 |         if (len > 0 && line[len -
      |         ^~
./samples/SAFE/__tmp_4d1828cc.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d1828cc.c:146:9: error: expected declaration or statement at end of input
